--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,20 @@
           <target>1.6</target>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+        <version>2.2.1</version>
+        <executions>
+          <execution>
+            <id>attach-sources</id>
+            <phase>verify</phase>
+            <goals>
+              <goal>jar-no-fork</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
   
@@ -33,6 +47,19 @@
       <groupId>com.netflix.archaius</groupId>
       <artifactId>archaius-core</artifactId>
       <version>0.5.15-SNAPSHOT</version>
+    </dependency>
+    
+    <dependency>
+      <groupId>org.reflections</groupId>
+      <artifactId>reflections</artifactId>
+      <version>0.9.8</version>
+      <exclusions>
+        <!-- Not making use of any of reflections' XML functions -->
+        <exclusion>
+          <groupId>dom4j</groupId>
+          <artifactId>dom4j</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     
     <dependency>
