--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,11 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>2.9.1</version>
+      </plugin>
     </plugins>
   </build>
   
@@ -46,7 +51,7 @@
     <dependency>
       <groupId>com.netflix.archaius</groupId>
       <artifactId>archaius-core</artifactId>
-      <version>0.5.15-SNAPSHOT</version>
+      <version>0.5.15</version>
     </dependency>
     
     <dependency>
