--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,44 @@
   <packaging>jar</packaging>
 
   <name>conqueso-client-java</name>
+  <description>A library to connect your Java applications to Conqueso.</description>
   <url>https://github.com/rapid7/conqueso-client-java</url>
+  
+  <issueManagement>
+    <url>https://github.com/rapid7/conqueso-client-java/issues</url>
+    <system>GitHub Issues</system>
+  </issueManagement>
+  
+  <licenses>
+    <license>
+      <name>The Apache Software License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
+  
+  <scm>
+    <url>https://github.com/rapid7/conqueso-client-java</url>
+    <connection>scm:git:git@github.com:rapid7/conqueso-client-java.git</connection>
+    <developerConnection>scm:git:git@github.com:rapid7/conqueso-client-java.git</developerConnection>
+  </scm>
+  
+  <developers>
+    <developer>
+      <id>jeffreymyers</id>
+      <name>Jeff Myers</name>
+      <email>myersj@gmail.com</email>
+      <organization>Rapid7</organization>
+      <organizationUrl>http://www.rapid7.com/</organizationUrl>
+      <roles>
+        <role>developer</role>
+      </roles>
+      <timezone>America/New_York</timezone>
+      <properties>
+        <picUrl>http://www.gravatar.com/avatar/a6e2b8d98bff278e840ebebf3ccbf583.png</picUrl>
+      </properties>
+    </developer>
+  </developers>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -31,10 +68,8 @@
         <version>2.2.1</version>
         <executions>
           <execution>
-            <id>attach-sources</id>
-            <phase>verify</phase>
             <goals>
-              <goal>jar-no-fork</goal>
+              <goal>jar</goal>
             </goals>
           </execution>
         </executions>
@@ -43,6 +78,13 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
         <version>2.9.1</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
