--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,18 @@
 
   <groupId>com.rapid7.conqueso</groupId>
   <artifactId>conqueso-client-java</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.5.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>conqueso-client-java</name>
   <description>A library to connect your Java applications to Conqueso.</description>
   <url>https://github.com/rapid7/conqueso-client-java</url>
+  
+  <parent>
+    <groupId>org.sonatype.oss</groupId>
+    <artifactId>oss-parent</artifactId>
+    <version>7</version>
+  </parent>
   
   <issueManagement>
     <url>https://github.com/rapid7/conqueso-client-java/issues</url>
@@ -46,12 +52,27 @@
       </properties>
     </developer>
   </developers>
-
+  
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
   <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-release-plugin</artifactId>
+          <version>2.1</version>
+          <configuration>
+            <mavenExecutorId>forked-path</mavenExecutorId>
+            <useReleaseProfile>false</useReleaseProfile>
+            <arguments>${arguments} -Psonatype-oss-release</arguments>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+    
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -69,7 +90,7 @@
         <executions>
           <execution>
             <goals>
-              <goal>jar</goal>
+              <goal>jar-no-fork</goal>
             </goals>
           </execution>
         </executions>
